--- a/Advance Linear Regression Surprise Housing.ipynb
+++ b/Advance Linear Regression Surprise Housing.ipynb
@@ -6911,6 +6911,16 @@
     "pd.set_option('display.max_rows', None)\n",
     "betas.sort_values('Lasso',ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "170224aa",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "The Optimal Value of Alpha for Ridge is 5 and lasso is 0.001. <br/>\n",
+    "Although the accuracy for both Lasso and Ridge are same, Lasso is good option to choose as it helps remove the variables and it penalises more."
+   ]
   }
  ],
  "metadata": {
